Add daily scraping via Railway cron

--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -1,33 +1,33 @@
-name: Auto Scrape Research Proposals
+name: 🔄 Scrape and Update Proposals
 
 on:
   schedule:
-    - cron: '0 */6 * * *'  # every 6 hours
-  workflow_dispatch:        # allows manual run
+    - cron: '0 */6 * * *'  # runs every 6 hours
+  workflow_dispatch:       # allows manual trigger
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: 📥 Checkout repo
+      - name: ⬇️ Checkout repository
         uses: actions/checkout@v3
 
-      - name: 🟢 Set up Node.js
+      - name: 🔧 Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 20
+          node-version: '20'
 
       - name: 📦 Install dependencies
         run: npm install
 
-      - name: 🕸️ Run scraper
+      - name: 🧠 Run scraper
         run: node scraper.js
 
-      - name: ✅ Commit and push changes
+      - name: 📤 Commit and push proposals.json
         run: |
           git config --global user.email "bot@mohsinhassan.in"
           git config --global user.name "AutoScraper Bot"
           git add frontend/public/proposals.json
-          git commit -m "🔄 Auto update proposals.json [CI skip]" || echo "No changes to commit"
-          git push
+          git commit -m "🔄 Update proposals.json [CI skip]" || echo "No changes"
+          git push origin master
